fixed spacing for ios safari app banner

--- a/src/app/common/components/BrowserRoot/ReadScreen.scss
+++ b/src/app/common/components/BrowserRoot/ReadScreen.scss
@@ -6,6 +6,7 @@
 .read-screen_ikr26q {
 	display: flex;
 	height: 100%;
+	padding-bottom: 90px;
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
